--- a/index.html
+++ b/index.html
@@ -3,16 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>Employees Communication Log</title>
+    <title>CRS</title>
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
     <script src="https://cdn.ckeditor.com/ckeditor5/37.1.0/classic/ckeditor.js"></script>
-    <script type="module" src="/js/login.js"></script>
-    <link rel = "stylesheet" href = "/css/main.css">
+    <script type="module" src="/js/main.js"></script>
+    <link rel = "stylesheet" href = "/css/style.css">
 </head>
 <body>
-    <div class="header">
-        <h1>Employees Communication Log</h1><br>
-        <a id="main-link">Login
+    <div id="root-container">
+        <div id="main-container">
+            <img id="crs-logo" src="/Images/KPs logo.png"></img>
+            <p id="crs-para">Central Reservation System</p>
+            <div id="button-div">
+                <button class="register-button" id="register">Register Property</button>
+                <button class="register-button" id="sign-in">Sign In</button>
+            </div>
+        </div>
     </div>
 </body>
 </html>
