Create Database MySQL

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>CRS</title>
+    <link rel="icon" type="image/x-icon" href="/Images/KPs CRS.png" class="back-logo"> 
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
     <script src="https://cdn.ckeditor.com/ckeditor5/37.1.0/classic/ckeditor.js"></script>
     <script type="module" src="/js/main.js"></script>
@@ -17,6 +18,7 @@
             <div id="button-div">
                 <button class="register-button" id="register">Register Property</button>
                 <button class="register-button" id="sign-in">Sign In</button>
+                <button class="register-button" id="create-account">Create Account</button>
             </div>
         </div>
     </div>
