--- a/src/register.html
+++ b/src/register.html
@@ -13,9 +13,9 @@
             <h1 id="detail-header">Property Details</h1>
             <div id="property-detail-div" class="w3-container w3-center w3-animate-right">
                 <p id="detail-p">Property Name</p>
-                <input id="property-name" class="detail-input" placeholder="Property Name*" class="name-input" required>
+                <input id="property-name" class="detail-input" placeholder="Property Name*" class="name-input" type="req" required>
                 <p id="detail-p">Property ID</p>
-                <input id="property-ID" class="detail-input" placeholder="Property ID*" class="id-input" required>
+                <input id="property-ID" class="detail-input" placeholder="Property ID*" class="id-input" type="req" required>
                 <p id="detail-p">Property Email</p>
                 <input id="property-email" class="detail-input" placeholder="Property Email*" class="email-input" required>
                 <p id="detail-p">Property Address</p>
