Create User account and store

--- a/src/createAccount.html
+++ b/src/createAccount.html
@@ -16,8 +16,12 @@
             <div id="input-container">
                 <p id="detail-p">Property ID</p>
                 <input id="property-id" class="detail-input" placeholder="Property ID*" type="id" required>
+                <p id="detail-p">First Name</p>
+                <input id="firstname" class="detail-input" placeholder="First Name*" type="username" required>
+                <p id="detail-p">Last Name</p>
+                <input id="lastname" class="detail-input" placeholder="Last Name*" type="username" required>
                 <p id="detail-p">Username</p>
-                <input id="Username" class="detail-input" placeholder="Username*" type="username" required>
+                <input id="username" class="detail-input" placeholder="Username*" type="username" required>
                 <p id="detail-p">Email</p>
                 <input id="email" class="detail-input" placeholder="Email*" type="email" required>
                 <p id="detail-p">Password</p>
