--- a/src/signIn.html
+++ b/src/signIn.html
@@ -15,11 +15,13 @@
             <img id="crs-logo" src="/Images/KPs logo.png"></img>
             <p id="crs-para">Central Reservation System</p>
             <div id="input-container">
+                <p id="detail-p">Property ID</p>
+                <input id="property-id" class="detail-input" placeholder="Property ID*" type="property-id" required>
                 <p id="detail-p">Username</p>
-                <input id="Username" class="detail-input" placeholder="Username*" type="username" required>
+                <input id="username" class="detail-input" placeholder="Username*" type="username" required>
                 <p id="detail-p">Password</p>
                 <input id="password" class="detail-input" placeholder="Password*" type="password" required>
-                <button class="signin-button" id="signin">Sign In</button><br>
+                <button class="signin-button" id="signin-button">Sign In</button><br>
                 <a id="forgot-password" href="/forgot-password">Forgot Password?</a>
             </div>
         </div>
