Forgot Password Verification Done

--- a/src/createAccount.html
+++ b/src/createAccount.html
@@ -12,8 +12,8 @@
 <body>
     <div id="root-container">
         <div id="main-container">
-            <img id="crs-logo" src="/Images/KPs logo.png"></img>
             <div id="input-container">
+                <button class="home-button" id="home-button">Home</button>
                 <p id="detail-p">Property ID</p>
                 <input id="property-id" class="detail-input" placeholder="Property ID*" type="id" required>
                 <p id="detail-p">First Name</p>
