--- a/src/register.html
+++ b/src/register.html
@@ -12,6 +12,7 @@
         <div id="main-container">
             <h1 id="detail-header">Property Details</h1>
             <div id="property-detail-div" class="w3-container w3-center w3-animate-right">
+                <button class="home-button" id="home-button">Home</button>
                 <p id="detail-p">Property Name</p>
                 <input id="property-name" class="detail-input" placeholder="Property Name*" class="name-input" type="req" required>
                 <p id="detail-p">Property ID</p>
