Reset Password and Dashboard

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="root-container">
         <div id="main-container">
-            <img id="crs-logo" src="/Images/KPs logo.png"></img>
+            <img id="crs-logo" src="/Images/KPs CRS.png"></img>
             <p id="crs-para">Central Reservation System</p>
             <div id="button-div">
                 <button class="register-button" id="register">Register Property</button>
