--- a/src/createAccount.html
+++ b/src/createAccount.html
@@ -26,8 +26,10 @@
                 <input id="email" class="detail-input" placeholder="Email*" type="email" required>
                 <p id="detail-p">Password</p>
                 <input id="password" class="detail-input" placeholder="Password*" type="password" required>
+                <img src="/Images/eye-close.png" class="eye-button" id="eye-button">
                 <p id="detail-p">Confirm Password</p>
                 <input id="confirm-password" class="detail-input" placeholder="Confirm Password*" type="password" required>
+                <img src="/Images/eye-close.png" class="eye-button2" id="eye-button2">
                 <button class="create-button" id="create-button">Create Account</button>
             </div>
         </div>
