--- a/src/signIn.html
+++ b/src/signIn.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Sign-In</title>
+    <link rel="icon" type="image/x-icon" href="/Images/login_logo.png" class="back-logo"> 
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
     <script src="https://cdn.ckeditor.com/ckeditor5/37.1.0/classic/ckeditor.js"></script>
     <script type="module" src="/js/signin.js"></script>
@@ -22,6 +23,7 @@
                 <input id="username" class="detail-input" placeholder="Username*" type="username" required>
                 <p id="detail-p">Password</p>
                 <input id="password" class="detail-input" placeholder="Password*" type="password" required>
+                <img src="/Images/eye-close.png" class="eye-button" id="eye-button">
                 <button class="signin-button" id="signin-button">Sign In</button><br>
                 <a id="forgot-password" href="/forgot">Forgot Password?</a>
             </div>
