Email Template and New Reservation div created

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -6,7 +6,9 @@
     <title>Dashboard</title>
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
     <script src="https://cdn.ckeditor.com/ckeditor5/37.1.0/classic/ckeditor.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="module" src="/js/dashboard.js"></script>
+    <script type="module" src="/js/newReservation.js"></script>
     <link rel = "stylesheet" href = "/css/dashboard.css">
 </head>
 <body>
@@ -22,7 +24,7 @@
                 <span>Settings</span>
                 <div class="account-content" id="account-content">
                     <button class="settings-button" id="settings-button">Dashboard</button>
-                    <a href="#" id="logout-button">Logout</a>
+                    <a href="/logout" id="logout-button">Logout</a>
                     <a href="#">Settings</a>
                 </div>
             </div>
